--- a/ECommerce/Views/Home/Index.cshtml
+++ b/ECommerce/Views/Home/Index.cshtml
@@ -7,8 +7,11 @@
     {
     <div class="container">
         <div class="row">
-            <input type="text" name="SearchName" id="SearchName" />
-            <input type="submit" value="Search" class="btn btn-outline-success" />
+            <div class="col-md-4"></div>
+            <div class="col-md-8">
+                <input type="text" name="SearchName" id="SearchName" />
+                <button class=" btn btn-primary glyphicon glyphicon-search">Search</button>
+            </div>
         </div>
     </div>
     }
